--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^1.4.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.12.4"
