--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "body-parser": "^1.18.2",
     "cloudinary": "^1.9.1",
     "express": "^4.16.2",
-    "mongoose": "^4.12.4"
+    "express-session": "^1.15.6",
+    "mongoose": "^4.12.4",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
