--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.12.4",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-github2": "^0.1.11",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
