--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
+    "express-method-override": "0.0.3",
     "express-session": "^1.15.6",
-    "formidable": "^1.1.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1"
+    "passport-facebook": "^2.1.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
